--- a/css/normalize.css
+++ b/css/normalize.css
@@ -48,8 +48,9 @@ section {
 
 h1 {
   font-size: 2em;
-  margin: 0.67em 0;
+  margin: 0.9em 0 1.1em;
 }
+
 
 /* Grouping content
    ========================================================================== */
@@ -231,6 +232,9 @@ audio:not([controls]) {
 
 img {
   border-style: none;
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 /**
