--- a/css/all.css
+++ b/css/all.css
@@ -10,34 +10,18 @@ p{
 h1,h2,h3,h4,h5,h6{
   font-weight: normal;
   color: #212121;
-  text-transform: uppercase;
 }
 h1{
-	font-size: 20px;
+	font-size: 28px;
 }
 h2{
-	font-size: 17px;
+	font-size: 24px;
 }
 h3{
-	font-size: 13px;
+	font-size: 18px;
 }
 h4{
-	font-size: 12px;
-}
-h1 span,
-h2 span,
-h3 span,
-h4 span{
-	display: inline-block;
-	*display: inline;
-	*zoom: 1;
-}
-h1 span:first-letter,
-h2 span:first-letter,
-h3 span:first-letter,
-h4 span:first-letter{
-	font-size: 1.4em;
-	font-weight: normal;
+	font-size: 16px;
 }
 input{
 	width: 100%;
@@ -105,15 +89,40 @@ button{
   content: "\e905";
 }
 
+.btn{
+	color:#000;
+	background: #e9e9e9;
+	padding: 4px 15px;
+	border-radius: 2px;
+	-webkit-transition:.4s;
+	-ms-transition:.4s;
+	-o-transition:.4s;
+	transition:.4s;
+}
+.btn:hover{
+	cursor: pointer;
+	background: #ddd9d9;
+
+}
+.btn-primary{
+	background: #24b5e1;
+	color: #fff;
+}
+.btn-primary:hover{
+	background: #1ea7d0;
+}
+
+
 body{
 	font:12px/1.5 Tahoma, Arial, sans-serif;
 	color: #333333;
+	min-width: 980px;
 }
 
 .container {
 	margin: 0 auto;
+	max-width:1200px;
 	min-width: 260px;
-	max-width: 982px;
 	padding: 0 30px;
 	box-sizing:content-box;
 }
@@ -138,15 +147,21 @@ a{
 .top-line .phone{
 	float: right;
 	font-size: 17px;
+	position: relative;
+	padding: 0 0 0 36px;
+}
+.phone-img{
+	position: absolute;
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
 }
 .top-line .icon-phone{
 	color: #24b6e1;
 	font-size: 28px;
 }
 .top-line .phone .phone-number{
-	display: inline-block;
-	line-height: 32px;
-	vertical-align: top;
+	display: block;
 }
 
 .block-main-menu{
@@ -207,7 +222,9 @@ a{
 .nav-next.text{
 	letter-spacing:0.2px;
 }
-
+.nav-next.text:hover{
+	text-decoration: underline;
+}
 /* 		END HEADER 		*/
 
 /* 		BEGIN CONTENT 		*/
@@ -229,6 +246,10 @@ a{
 }
 .block-description{
 	padding: 7px 0 2px 0;
+}
+
+.main-img{
+	margin: 0 auto;
 }
 
 .catalog-list li{
@@ -258,13 +279,19 @@ a{
 }
 .galary-list-image{
 	font-size: 0;
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex; 
-	justify-content: space-between;
 }
-.galary-list-image img{
+.galary-img{
+	width: 30%;
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 5% 3% 0;
+}
+.galary-img:nth-child(3n){
+	margin-right: 0;
+	font-size: 12px;
+}
+.galary-img img{
+	width: 100%;
 }
 .galary-list-text{
 	padding-left: 15px;
@@ -416,6 +443,9 @@ a{
 	display: block;
 	margin-bottom: 4px;
 }
+.block-news .new-title:hover{
+	text-decoration: none;
+}
 .block-news .new-title:first-letter{
 	text-transform: uppercase;
 }
@@ -428,23 +458,15 @@ a{
 	margin-bottom: 24px;
 }
 .all-news{
-	color:#000;
-	background: #e9e9e9;
-	padding: 4px 15px;
 	float: right;
-	border-radius: 2px;
 }
 .subscription-form input{
 	margin-bottom: 17px;
 }
 .subscription-form button{
-	background: #24b5e1;
-	color: #fff;
-	font-size: 14px;
 	float: right;
-	border-radius: 2px;
-	padding:5px 15px;
 	margin-top: 10px;
+	font-size: 14px;
 }
 /* 		END SIDEBAR 		*/
 
@@ -477,23 +499,27 @@ a{
     display: inline-block;
     width: 30px;
     border-radius: 50%;
-    height: 30px;
     vertical-align: top;
     text-align: center;
     position: relative;
     transition:0.4s;
+	line-height: 30px;
 }
 .social-links a:hover{
 	background: #909090;
 }
-.social-links i{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+.icon-skype{
+	position: relative;
 }
-.social-links .icon-skype{
-	left: 46%;
+.social-links .path2{
+	position: absolute;
+	top: 0;
+	left: 0;
+	font-style: normal;
+}
+.social-links .path1{
+	position: relative;
+	left: -1px;
 }
 
 /* 		END FOOTER* 		*/
